# yew_app

./: .gitignore  Cargo.toml  LICENSE.txt  Trunk.toml  index.html  styles.css
src/: daily_csv.rs  depart.rs  edit_trailer.rs  fix_parts.rs  float_button.rs  gmap.rs  load_details.rs  main.rs  models.rs  nav.rs  new_shipment.rs  recent.rs  recent_local_storage.rs  requests.rs  server.rs  set_door.rs  set_picker.rs  shipment_details.rs  shipments.rs  state.rs  todays_schedule.rs  todays_shipments.rs  trailer_arrive.rs  trailers_date_range.rs  trucks.rs  upload.rs  user_local_storage.rs  verified_by.rs
static/: styles.css
