[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
reqwest = { version = "0.12.5", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4.42"
gloo = { version = "0.11.0", features = ["console"] }
web-sys = { version = "0.3.76", features = ["Window", "Navigator", "CredentialsContainer"] }
dotenv = "0.15.0"
chrono = "0.4"
csv = "1.3.0"